--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -19,6 +19,7 @@
             font-family: 'Lato', sans-serif;
             --border-bottom: 1px solid #efefef;
             padding-bottom: 5px;
+            border-bottom: 1px solid #e1e1e1;
         }
 
         #img {
@@ -54,7 +55,7 @@
 
         <aq-community-postdetail-content class="postContent" post-content="{{replyData}}"></aq-community-postdetail-content>
 
-        <div class="bar"></div>
+        <!--div class="bar"></div-->
     </template>
 
     <script>
