--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -9,7 +9,7 @@
                 --margin:0;
             }
             .tag-content{
-                font-size: 16px;
+                font-size: 14px;
                 color: #cc6666;
                 font-family: 'Lato' , sans-serif;
                 font-weight: 400;
@@ -19,12 +19,12 @@
                 background-color: white;
                 color: #cc6666;
                 border-radius: 2px;
-                margin-right: 15px;
+                --margin-right: 5px;
                 border: 1px solid #e1e1e1;
                 --padding-bottom:3px;
             }
         </style>
-        <div class="tag-container layout horizontal">
+        <div class="tag-container layout horizontal center">
             <span class="tag-content">[[label]]</span>
             <content></content>
         </div>
