--- a/src/components/common/aq-tags-input-container.html
+++ b/src/components/common/aq-tags-input-container.html
@@ -7,25 +7,26 @@
             }
 
             ::content input {
-                width: 30%;
-                padding: 0;
-                padding-left: 10px;
-                border: none;
-                outline: none;
-                background: none;
+                height: 32px;
+                line-height: 46px;
+                border: 0;
                 margin: 0;
-                --max-height: 30px;
-                --border: 1px solid #e1e1e1;
-                font-size: 16px;
+                padding-left: 10px;
+                border: 1px solid #e5e5e5;
+                font-size: 14px;
+                background-color: #fff;
+                box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+                transition: all 0.4s ease-in-out;
+                display: inline-block;
             }
 
             ::content .tags-container {
                 padding: 0;
                 margin: 0;
-                overflow: hidden;
                 overflow-y: scroll;
                 width: 70%;
                 @apply(--layout-horizontal);
+                margin-top: 5px;
             }
 
             ::content .tags-header {
@@ -33,19 +34,9 @@
                 color: #727272;
             }
 
-            .tagsInputContainer {
-                height: var(--tags-container-height,35px);
-                font-size: 16px;
-                --margin-bottom: 5px;
-                color: #24293d;
-                background-color: var(--tags-container-background-color,#f2f2f2);
-                padding-left: var(--tags-container-padding-left,10px);
-                width:100%;
-                height: 30px;
-            }
             
         </style>
-        <div class="tagsInputContainer layout horizontal center-justified">
+        <div class="tagsInputContainer layout horizontal">
             <content></content>
         </div>
     </template>
