--- a/src/components/community/aq-community-previewpost-item.html
+++ b/src/components/community/aq-community-previewpost-item.html
@@ -24,7 +24,7 @@
             <div class='preview-internal'> 
                 <aq-community-postdetail-header 
                     preview
-                    reply
+                    reply=[[reply]]
                     post-header="[[threadData]]">
                 </aq-community-postdetail-header>
 
