--- a/src/components/common/aq-icon-expandable-search.html
+++ b/src/components/common/aq-icon-expandable-search.html
@@ -135,6 +135,12 @@
                 }
             },
 
+            focus: function() {
+            	if(this.$$('#searchbox')) {
+            		this.$$('#searchbox').focus();
+        		}
+            }
+
 		});
 	</script>
 </dom-module>
